# miniws

./: .gitignore  CMakeLists.txt  README.md
include/: BaseTransport.hpp  miniws.hpp
libs/: base64.hpp
src/: BaseTransport.cpp  TcpTransport.cpp  TcpTransport.hpp  TlsSession.cpp  TlsSession.hpp  TlsTransport.cpp  TlsTransport.hpp  miniws.cpp
test/: CMakeLists.txt  main.cpp
test-server/: cert.pem  csr.pem  key.pem  main.js  package.json
